# cmd-payroll

./: CMakeLists.txt  README.md  employee.cpp  employee.h  employeeprocessor.cpp  employeeprocessor.h  employees.xml  hourly.txt  hourlyemployee.cpp  hourlyemployee.h  main.cpp  payroll.qrc  payroll.xsd  salary.txt  salaryemployee.cpp  salaryemployee.h  script.py
